@@ -1,3 +1,9 @@
+2002-09-16  Jochen Wiedmann  <joe@ispsoft.de> (0.2019)
+
+	* Added hints to installing DBD::mysql with PPM 3.
+	  (Stefan Prehn, stefanprehngmx.de)
+	* Added $DBD::mysql::CLONE
+
 2002-08-12  Jochen Wiedmann  <joe@ispsoft.de> (0.2018)
 
 	* t/dbdadmin.t: The call to func('createdb') was
